--- a/07_html_css_lab/designers.html
+++ b/07_html_css_lab/designers.html
@@ -1,122 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Startup Matchmaker | Developers</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body class="developerpage">
+    <header>
+        <h2><a href="./index.html">Startup Matchmaker</a></h2>
+        <nav>
+            <ul class="primary-navigation">
+                <li><a href="./developers.html">Find Developers</a></li>
+                <li><a href="./designers.html">Find Designers</a></li>
+            </ul>
+            <ul class="secondary-navigation">
+                <li>How it works</li>
+                <li>Our Team</li>
+                <li>Blog</li>
+            </ul>
+        </nav>
+    </header>
+    <section class="profiles">
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
 
+        <p>Same Person</p>
 
-		<title>Designers</title>
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
 
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
 
-	</head>
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
 
-	<body>
-		<header>
-			<div class="container">
-				<h1>Startup Matchmaker </h1>
-				<nav>
-					<ul>
-						<li><a href="developers.html">FIND DEVELOPERS</a></li>
-						<li><a href="designers.html">FIND DESIGNERS</a></li>
-						<li><a href="howitworks.html">How it Works</a></li>
-						<li><a href="ourteam.html">Our Team</a></li>
-						<li><a href="blog.html">Blog</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+        <p>Same Person</p>
 
-	<section id="designerprofiles">
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
 
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <p>Same Person</p>
 
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
 
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <p>Same Person</p>
 
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
 
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
+        <p>Same Person</p>
 
-		<div class="designercards">
-			<img src=asdfasd.png alt="PIC HERE"></img>
-			<h1>Some Person</h1>
-			<ul>
-				<li>UX</li>
-				<li>Illustration</li>
-				<li>Graphic Design</li>
-			</ul>
-			<button>CONTACT</button>
-		</div>
-		
-</section>
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
+
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
+
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
+
+        <p>Same Person</p>
+
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
+
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
+
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
+
+        <p>Same Person</p>
+
+        <ul>
+          <button><li>UX</li></button>
+          <button><li>Illustration</li></button>
+          <button><li>Graphic Design</li></button>
+        </ul>
+
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
+
+      <div class="profile">
+        <img src="http://placecage.com/200/200" alt="">
+
+        <p>Same Person</p>
+
+        <ul>
+          <button><li>UX</li></button>
+          <button class="largebutton"><li>Illustration</li></button>
+          <button class="largebutton"><li>Graphic Design</li></button>
+        </ul>
+
+        <button><a href="clickcontact">Contact</a></button>
+      </div>
+    </section>
+ </body>
+</html>
