--- a/08_flex_box/startup_matchmaker/designers.html
+++ b/08_flex_box/startup_matchmaker/designers.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Startup Matchmaker | Developers</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Startup Matchmaker | Designers</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body class="developerpage">
+  <body class="profilecards">
     <header>
         <h2><a href="./index.html">Startup Matchmaker</a></h2>
         <nav>
@@ -21,15 +21,16 @@
         </nav>
     </header>
     <section class="profiles">
+    <div class="profiles">
       <div class="profile">
         <img src="http://placecage.com/200/200" alt="">
 
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -41,9 +42,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -55,9 +56,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -69,9 +70,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -83,9 +84,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -97,9 +98,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -111,9 +112,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
@@ -125,9 +126,9 @@
         <p>Same Person</p>
 
         <ul>
-          <button><li>HTML</li></button>
-          <button><li>CSS</li></button>
-          <button><li>JS</li></button>
+          <li>UX</li>
+          <li>Illustration</li>
+          <li>Graphic Design</li>
         </ul>
 
         <button><a href="clickcontact">Contact</a></button>
